--- a/env.example
+++ b/env.example
@@ -14,6 +14,9 @@ GOOGLE_SECRET=your-google-client-secret
 NEXT_PUBLIC_STRIPE_PUBLISHABLE_KEY=pk_test_your-stripe-publishable-key
 STRIPE_SECRET_KEY=sk_test_your-stripe-secret-key
 STRIPE_WEBHOOK_SECRET=whsec_your-webhook-secret
-STRIPE_PRICE_ID_STARTER=price_your-starter-price-id
-STRIPE_PRICE_ID_PRO=price_your-pro-price-id
 
+# Stripe ONE-TIME Payment Price ID
+# You need to create ONE product in Stripe with ONE price (one-time payment)
+# Example: "Lifetime Access" product with $49 one-time price
+# Then paste the price ID below (starts with price_)
+NEXT_PUBLIC_STRIPE_PRICE_LIFETIME=price_your_lifetime_access_price_id
