--- a/env.example
+++ b/env.example
@@ -15,8 +15,19 @@ NEXT_PUBLIC_STRIPE_PUBLISHABLE_KEY=pk_test_your-stripe-publishable-key
 STRIPE_SECRET_KEY=sk_test_your-stripe-secret-key
 STRIPE_WEBHOOK_SECRET=whsec_your-webhook-secret
 
-# Stripe ONE-TIME Payment Price ID
-# You need to create ONE product in Stripe with ONE price (one-time payment)
-# Example: "Lifetime Access" product with $49 one-time price
-# Then paste the price ID below (starts with price_)
+# Stripe Price IDs
+# Create products in Stripe and add their price IDs here
+# For one-time payments:
 NEXT_PUBLIC_STRIPE_PRICE_LIFETIME=price_your_lifetime_access_price_id
+
+# For recurring subscriptions (optional):
+STRIPE_PRICE_STARTER_MONTHLY=price_your_starter_monthly_price_id
+STRIPE_PRICE_STARTER_YEARLY=price_your_starter_yearly_price_id
+STRIPE_PRICE_PRO_MONTHLY=price_your_pro_monthly_price_id
+STRIPE_PRICE_PRO_YEARLY=price_your_pro_yearly_price_id
+STRIPE_PRICE_EXPERT_MONTHLY=price_your_expert_monthly_price_id
+STRIPE_PRICE_EXPERT_YEARLY=price_your_expert_yearly_price_id
+
+# Email Service (Resend)
+# Get your API key from https://resend.com
+RESEND_API_KEY=re_your_resend_api_key
