--- a/package.json
+++ b/package.json
@@ -10,19 +10,19 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "bcryptjs": "^2.4.3",
+    "daisyui": "^4.4.0",
+    "mongoose": "^8.0.0",
     "next": "^14.0.0",
+    "next-auth": "^4.24.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "next-auth": "^4.24.0",
-    "mongoose": "^8.0.0",
-    "stripe": "^14.0.0",
-    "bcryptjs": "^2.4.3",
-    "daisyui": "^4.4.0"
+    "resend": "^6.5.2",
+    "stripe": "^14.0.0"
   },
   "devDependencies": {
-    "tailwindcss": "^3.3.0",
+    "autoprefixer": "^10.4.0",
     "postcss": "^8.4.0",
-    "autoprefixer": "^10.4.0"
+    "tailwindcss": "^3.3.0"
   }
 }
-
